@startuml
'https://plantuml.com/class-diagram



class WordFrequencySort{
    +List<String> Combiner(List<String> textList)
    +List<String> CharCombiner(List<String> textList, String Current, String CurrentBuild, int i)
    +TreeMap<String, Integer> WordFrequency(List<String> textList)
    List<String> spreadList
    String Current
    String CurrentBuild
    int lastspace
    int i
    int j
    Map<String, Integer> Frequency
    TreeMap<String, Integer> sorted
}

class WordFrequencyBase{
    TreeMap Frequency
    List<String> names
    - {static} List<String> convertFile()
    + {static} void main()
}

class WordFrequencyExport{
    String keyString
    int valueMap
    String Staradd
    + {static} String Stars(int staramount)
    + {static} void printList(TreeMap<String, Integer> list)
}

class WordFrequencyCompare{
    int compare(String a, String b)
    +Map<String, Integer> base
}

WordFrequencyBase <|-- WordFrequencySort
WordFrequencyBase <|-- WordFrequencyExport
WordFrequencySort <|-- WordFrequencyCompare
@enduml